--- a/fined_frontend/src/pages/Home/Hero.css
+++ b/fined_frontend/src/pages/Home/Hero.css
@@ -15,10 +15,6 @@
   padding: 0;
 }
 
-html::-webkit-scrollbar,
-body::-webkit-scrollbar {
-  display: none;
-}
 
 body {
   font-family: 'Nunito', sans-serif;
